table styling fixed to better work on smaller device

--- a/style.css
+++ b/style.css
@@ -115,8 +115,7 @@ body {
 .fig {
     border-radius: 5px;
     background-color: rgb(224, 201, 222);
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding: 2px;
 }
 
 table {
@@ -129,6 +128,10 @@ th,
 td {
     border: 1px solid white;
     border-collapse: collapse;
-    width: 8%;
     text-align: center;
+}
+
+th,
+td {
+    width: 40px;
 }
